link to blog, move FAQ to foot and remove  sponsoring from navbar

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -14,6 +14,8 @@
         %li= link_to t("navigation.coach_guide"), teaching_guide_path
         %li= link_to t("navigation.tutorials"), "http://tutorials.codebar.io"
         %li= link_to t("navigation.becoming_sponsor"), sponsoring_path
+        %li= link_to t("navigation.faq"), faq_path
+
 
     .large-3.columns
       %span.git-tip
