--- a/app/assets/stylesheets/partials/_colors.css.sass
+++ b/app/assets/stylesheets/partials/_colors.css.sass
@@ -6,6 +6,7 @@ $gray-title-button: #f5f5f5
 $red: #C40233
 $lightgreen: #69b986
 $lightyellow: #f8d773
+$white: #ffffff
 
 $become-member-grey: #5e5a6b
 $become-member-white: #f1f1f3
@@ -37,3 +38,5 @@ $session-titles-dark-grey: #2d193c
 $session-day-gray: #555555
 $sub-session-desc-grey: #6e6b6c
 $dark-color: #0e001b
+$secondary-color: #E97CA1
+$primary-color: #596677
