--- a/app/views/events/_minified_event.html.haml
+++ b/app/views/events/_minified_event.html.haml
@@ -5,21 +5,22 @@
         .time
           = event.time
       .text-center
-        - if @user.attending?(event.__getobj__)
-          = link_to event.path do
-            %label.label.success Attending
-        - if @user.event_organiser?(event)
-          = link_to event.admin_path do
-            %label.label.label-deafault Manage
+        - if event.chapter
+          %label.label.info
+            = event.chapter.name
+        - if @user
+          - if @user.attending?(event.__getobj__)
+            = link_to event.path do
+              %label.label.success Attending
+          - if @user.event_organiser?(event)
+            = link_to event.admin_path do
+              %label.label Manage
     .small-10.columns
       .title
         =link_to event.to_s, event.path
         - if event.venue.present?
           at
           = link_to event.venue.name, event.venue.website
-
-        - if event.chapter
-          = event.chapter.name
       .row
         .medium-6.columns
           - if event.organisers.any?
@@ -27,9 +28,10 @@
               - event.organisers.each do |organiser|
                 =link_to twitter_url_for(organiser.twitter) do
                   =image_tag organiser.avatar(26), class: 'th radius', title: organiser.full_name
-        .medium-6.columns
+        .medium-6.columns#sponsors
           - if event.sponsors.any?
             - event.sponsors.each do |sponsor|
-              = image_tag sponsor.avatar, class: 'sponsor'
+              = link_to sponsor.website do
+                = image_tag sponsor.avatar, class: 'sponsor'
 
       %br
