add organisers label to workshop form

--- a/app/views/admin/workshops/_edit_form.html.haml
+++ b/app/views/admin/workshops/_edit_form.html.haml
@@ -16,6 +16,7 @@
       = f.association :sponsors
   .row
     .large-6.columns
+      %label Organisers
       = f.collection_select :organisers, Member.all, :id, :full_name, { selected: @workshop.organisers.map(&:id) }, { multiple: true }
       = f.input :invitable
   .row
