--- a/app/views/sponsors/index.html.haml
+++ b/app/views/sponsors/index.html.haml
@@ -1,16 +1,19 @@
-= render partial: 'shared/title', locals: { title: "Sponsors", date: nil }
-%section#banner
-  .container
-    .row
-      .large-12.columns
-        %p
-          Would you like to host one of our workshops or help us out by making a donation? Get in touch at
-          =mail_to "hello@codebar.io", "hello@codebar.io"
-          ='.'
-        %hr
-      .large-12.columns
-        %ul.small-block-grid-2.medium-block-grid-3.large-block-grid-3#sponsors
-          - @sponsors.each do |sponsor|
-            %li
-              = link_to image_tag(sponsor.avatar, class: "sponsor-logo", alt: sponsor.name), sponsor.website
-    %br
+.stripe.reverse
+  .row
+    .large-12.columns
+      %p.lead
+        Without our sponsors running <strong>codebar</strong> would have been close to impossible. They provide us with space, food and drinks, internet, help us cover travel expenses for our students and our running costs.
+      %p.lead
+        Thank you for sharing our dream of creating a more welcoming, equal and diverse tech industry.
+
+      %p
+        If you are interested in becoming a sponsor get in touch at #{mail_to "hello@codebar.io", "hello@codebar.io"}
+        ='.'
+
+.stripe.reverse
+  .row
+    .large-12.columns
+      %ul.small-block-grid-2.medium-block-grid-3.large-block-grid-3#sponsors
+        - @sponsors.each do |sponsor|
+          %li
+            = link_to image_tag(sponsor.avatar, class: "sponsor-logo", alt: sponsor.name), sponsor.website
