--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,8 +14,8 @@
  *= require main
  *= require event
  *= require star-rating
- *= require pickadate/default
- *= require pickadate/default.date
- *= require pickadate/default.time
+ *= require pickadate/classic
+ *= require pickadate/classic.date
+ *= require pickadate/classic.time
  *= require chosen
  */
