--- a/app/views/admin/events/show.html.haml
+++ b/app/views/admin/events/show.html.haml
@@ -1,41 +1,85 @@
-.past__container
+%section.stripe.reverse
   .row
-    .large-12.columns
-      %h2= @event.name
+    .medium-12.columns
+      %h2
+        =@event.to_s
       %h3
         %small #{l(@event.date_and_time)} to #{l(@event.ends_at, format: :time) }
-      %p.lead= @event.description
 
-      %br
+  .row
+    - if @event.venue.present?
+      .medium-1.columns
+        - unless @event.spaces?
+          %label.label.warning Workshop full
+      .medium-3.columns
+        %strong.label.round.primary #{@event.venue.seats} student spots, #{@event.venue.coach_spots} coach spots
+        %br
+        %br
 
-%br
-.row
-  .large-12.columns
-    %h4 #{@event.invitations.count} Invitations
-    %hr
-.row
-  .large-6.columns
-    %h4 Students (#{@attending_students.count} of #{@event.student_spaces.to_s})
-    =render partial: 'attendances', locals: { invitations: @attending_students }
-  .large-6.columns
-    %h4 Coaches (#{@attending_coaches.count} of #{@event.coach_spaces.to_s})
-    =render partial: 'attendances', locals: { invitations: @attending_coaches }
-%br
-%br
-%br
-.past__container
+  .row
+    .large-3.small-6.columns#host
+      - if @event.venue.present?
+        %h4 Venue
+        %strong= @event.venue.name
+        %br
+        %small
+          = @address.to_html
+    .large-3.small-6.columns#sponsors
+      - if @event.sponsors.any?
+        %h4 Sponsors
+        %ul.no-bullet
+          - @event.sponsors.each do |sponsor|
+            %li
+              %span
+                = link_to sponsor.name, [:admin, sponsor]
+    .large-6.small-12.columns
+      %h4 Team
+      - @event.organisers.each do |organiser|
+        %span{ "data-tooltip" =>"", "aria-haspopup" => "true",  class: "has-tip",  title: organiser.full_name }
+          = image_tag(organiser.avatar(40))
+
+  %br
   .row
     .large-12.columns
-      %a{ name: "organisers" }
-        %h2{ "data-magellan-destination" => "organisers"}
-          .text-center Organisers
-      %br
-      - if @event.organisers.any?
-        %ul.small-block-grid-2.medium-block-grid-4
-          - @event.organisers.each do |organiser|
-            %li.text-center
-              =link_to twitter_url_for(organiser.twitter) do
-                =image_tag organiser.avatar(56), class: 'th radius', title: organiser.full_name
-                %br
-                %br
-                = organiser.full_name
+      %p.lead= @event.description
+  .row
+    .large-6.columns
+      %dl.accordion{ "data-accordion" => true }
+        %dd.accordion-navigation
+          =link_to "#schedule" do
+            Schedule
+          #schedule.content
+            = dot_markdown(@event.schedule)
+
+
+  #manage
+    .row
+      .large-6.medium-12.columns
+        %ul.button-group.primary
+          %li
+            =link_to edit_admin_event_path(@event), class: 'button small' do
+              %i.fa.fa-pencil
+              Edit
+          - if @event.date_and_time.past?
+            %li
+              =link_to "#", class: "button small primary disabled", title: "The event has already taken place" do
+                %i.fa.fa-send
+                Invite
+          - elsif @event.venue.present? and @event.invitable?
+            %li
+              =link_to "#", method: :post, class: "button disabled primary small", title: 'This feature has not been implemented yet' do
+                %i.fa.fa-send
+                Invite
+          - else
+            %li
+              =link_to "#", class: "button small primary disabled", title: "The event is not invitable." do
+                %i.fa.fa-send
+                Invite
+          %li
+            =link_to admin_event_path(format: 'csv'), class: 'button small primary', title: "CSV for labels" do
+              %i.fa.fa-users
+              Labels
+
+
+#invitations.stripe.reverse
+  = render partial: 'invitation_management'
