--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,17 +1,14 @@
-= render partial: 'shared/title', locals: { title: t('events.title'), date: nil }
-%section#banner
+%section#banner.stripe
   .row
     .large-12.columns
       - if @events.any?
         .upcoming
           .titlebox
-          = render partial: 'events', locals: { events: @events }
+          = render partial: 'events', locals: { grouped_events: @events }
 
-  .past__container
-    .row
-      .large-12.columns
-        - if @past_events.any?
-          .past#past
-            .titlebox
-              %h2= t('events.past')
-            = render partial: 'events', locals: { events: @past_events }
+.stripe
+  .row
+    .large-12.columns
+      - if @past_events.any?
+        .past#past
+          = render partial: 'events', locals: { grouped_events: @past_events }
