--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,4 +1,4 @@
-.past__container
+.stripe.reverse
   .row
     .large-12.columns
       %h2= @event.name
@@ -24,30 +24,31 @@
 
 %br
 %br
-.row
-  .large-7.columns
-    - if @event.announce_only
-      %a{ name: "information" }
-      %h4{ "data-magellan-destination" => "information"} Information
-    - else
-      %a{ name: "schedule" }
-      %h4{ "data-magellan-destination" => "schedule"}
-        = t('events.schedule')
-    = @event.schedule.html_safe
-  .large-5.columns
-    %h4= t('events.location')
-    .row
-      .medium-8.columns
-        %p
-          = @host_address.to_html
-      .medium-4.columns
-        = image_tag @event.venue.avatar, class: 'sponsor-logo'
-    .row
-      .large-12.columns
-        %iframe{ width: '100%', height: '250', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
-        =link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
-      .medium-6.columns
-.past__container
+.stripe.reverse
+  .row
+    .large-7.columns
+      - if @event.announce_only
+        %a{ name: "information" }
+        %h4{ "data-magellan-destination" => "information"} Information
+      - else
+        %a{ name: "schedule" }
+        %h4{ "data-magellan-destination" => "schedule"}
+          = t('events.schedule')
+      = dot_markdown(@event.schedule)
+    .large-5.columns
+      %h4= t('events.location')
+      .row
+        .medium-8.columns
+          %p
+            = @host_address.to_html
+        .medium-4.columns
+          = image_tag @event.venue.avatar, class: 'sponsor-logo'
+      .row
+        .large-12.columns
+          %iframe{ width: '100%', height: '250', frameborder: '0', scrolling: 'no', marginheight: '0', marginwidth: '0', src: %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&t=m&z=15&output=embed} }
+          =link_to "View larger map", %{https://maps.google.com/maps?f=q&source=s_q&hl=en&amp;geocode=&q=#{@host_address.for_map}&ie=UTF8&hq=&t=m&z=15}, style: "color:#0000FF;text-align:left"
+        .medium-6.columns
+.stripe.reverse
   .row
     .large-12.columns
       %a{ name: "faq" }
@@ -59,51 +60,57 @@
       - else
         = render partial: 'events/faq'
 
-%br
-%br
 - unless @event.announce_only
-  .row
-    .large-12.columns
-      %a{ name: "sponsors" }
-      %h2{ "data-magellan-destination" => "sponsors"}
-        .text-center= t('events.sponsors')
-      %p.text-center
-        %i= t('events.thx_to_sponsors')
-      %br
-      - if @event.sponsors.any?
-        %ul.no-bullet
-          - @event.sponsors.each do |sponsor|
-            %li
-              .row
-                .large-2.columns
-                  = image_tag sponsor.avatar, class: 'sponsor'
-                .large-10.columns
-                  =link_to sponsor.name, sponsor.website
-                  %p
-                    = sponsor.description
-              %br
-  %br
-  .past__container
+  .stripe.reverse
+    .row
+      .large-12.columns
+        %a{ name: "sponsors" }
+        %h2{ "data-magellan-destination" => "sponsors"}
+          .text-center= t('events.sponsors')
+        %p.text-center
+          %i= t('events.thx_to_sponsors')
+        %br
+        - if @event.sponsors.any?
+          %ul.no-bullet
+            - @event.sponsors.each do |sponsor|
+              %li
+                .row
+                  .large-2.columns
+                    = image_tag sponsor.avatar, class: 'sponsor'
+                  .large-10.columns
+                    =link_to sponsor.name, sponsor.website
+                    %p
+                      = sponsor.description
+- if @event.verified_coaches.any?
+  .stripe.reverse
     .row
       .large-12.columns
         %a{ name: "coaches" }
           %h2{ "data-magellan-destination" => "coaches"}
             .text-center= t('events.coaches')
+          %ul.small-block-grid-2.medium-block-grid-4
+            - @event.verified_coaches.each do |coach|
+              %li.text-center
+                =link_to twitter_url_for(coach.twitter) do
+                  =image_tag coach.avatar(56), class: 'th radius', title: coach.full_name
+                  %br
+                  %br
+                  = coach.full_name
     %br
-  %br
-.row
-  .large-12.columns
-    %a{ name: "organisers" }
-      %h2{ "data-magellan-destination" => "organisers"}
-        .text-center= t('events.organisers')
+.stripe.reverse
+  .row
+    .large-12.columns
+      %a{ name: "organisers" }
+        %h2{ "data-magellan-destination" => "organisers"}
+          .text-center= t('events.organisers')
+      %br
+      - if @event.organisers.any?
+        %ul.small-block-grid-2.medium-block-grid-4
+          - @event.organisers.each do |organiser|
+            %li.text-center
+              =link_to twitter_url_for(organiser.twitter) do
+                =image_tag organiser.avatar(56), class: 'th radius', title: organiser.full_name
+                %br
+                %br
+                = organiser.full_name
     %br
-    - if @event.organisers.any?
-      %ul.small-block-grid-2.medium-block-grid-4
-        - @event.organisers.each do |organiser|
-          %li.text-center
-            =link_to twitter_url_for(organiser.twitter) do
-              =image_tag organiser.avatar(56), class: 'th radius', title: organiser.full_name
-              %br
-              %br
-              = organiser.full_name
-  %br
