--- a/app/views/members/_testimonials.html.haml
+++ b/app/views/members/_testimonials.html.haml
@@ -1,12 +1,12 @@
-.row
-  .large-12.columns
-    %ul{ "data-orbit" => true, "data-options" => " animation:fade;timer_speed:60000;next_on_click:false;bullets:false;slide_number:false;circular:true;navigation_arrows:false;pause_on_hover:false;" }
-      - @testimonials.each_with_index do |testimonial, index|
-        %li{ "data-orbit-slide" => "testimonial-#{index}" }
+%ul{ "data-orbit" => true, "data-options" => " animation:fade;timer_speed:60000;next_on_click:false;bullets:false;slide_number:false;circular:true;navigation_arrows:false;pause_on_hover:false;" }
+  - @testimonials.each_with_index do |testimonial, index|
+    %li{ "data-orbit-slide" => "testimonial-#{index}" }
+      .row
+        .large-11.medium-10.small-9.columns
           %blockquote
-            .row
-              .small-8.medium-10.columns
-                %p= testimonial.text
-                %cite.text-right= testimonial.member.full_name
-              .small-4.medium-2.columns
-                = image_tag testimonial.member.avatar, class: 'th radius'
+            %p= testimonial.text
+            %cite.right
+              = testimonial.member.full_name
+        .large-1.medium-2.small-3.columns
+          %br
+          = image_tag testimonial.member.avatar(40), class: 'th radius'
