link to manual sponsor path

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -13,7 +13,7 @@
         %li= link_to t("navigation.code_of_conduct"), code_of_conduct_path
         %li= link_to t("navigation.coach_guide"), teaching_guide_path
         %li= link_to t("navigation.tutorials"), "http://tutorials.codebar.io"
-        %li= link_to t("navigation.becoming_sponsor"), sponsoring_path
+        %li= link_to t("navigation.becoming_sponsor"), "http://manual.codebar.io/becoming-a-sponsor"
         %li= link_to t("navigation.faq"), faq_path
 
 
