change banner in faq

--- a/app/views/dashboard/faq.html.haml
+++ b/app/views/dashboard/faq.html.haml
@@ -1,5 +1,8 @@
-= render partial: 'shared/title', locals: { title: "Frequently Asked Questions", date: nil }
-%section#banner
+.stripe.reverse#banner
+  .row
+    .large-12.columns
+      %h2 Frequently Asked Questions
+.stripe.reverse
   .row
     .large-12.columns
       %dl
