update dashboard and wall of fame

--- a/app/views/dashboard/dashboard.html.haml
+++ b/app/views/dashboard/dashboard.html.haml
@@ -1,4 +1,8 @@
-= render partial: 'shared/title', locals: { title: "Your dashboard", date: nil }
+.stripe.reverse
+  .row
+    .large-12.columns
+      %h2
+        Dashboard
 %section
   .row
     .large-3.columns#sidebar
