--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -1,4 +1,4 @@
-%section#banner
+%section#banner.stripe.reverse
   .row
     .medium-1.columns
       =image_tag @member.avatar(100), class: 'th radius', title: @member.full_name
@@ -20,35 +20,69 @@
         %dt About
         %dd= @member.about_you
 
-    .medium-4.columns.panel
-      %h3 Subscriptions
-      %ul.no-bullet
-        - @member.groups.each do |group|
-          %li
-            = link_to [:admin, group] do
-              #{group.name} (#{group.chapter.name})
-  .row
-    %hr
-    .medium-8.columns
-      %h3 Attended workshops
-      - @member.session_invitations.attended.each do |invitation|
-        .row
-          .medium-4.columns
-            - workshop = invitation.sessions
-            =link_to invitation_path(invitation) do
-              %strong=workshop.chapter.name
-              %br
-              = humanize_date_with_time(workshop.date_and_time, workshop.time)
-          .medium-4.columns
-            = invitation.note
     .medium-4.columns
-      %h3 Member notes (#{@member.member_notes.count})
+      - if @member.groups.any?
+        %h3 Subscriptions
+        %ul.no-bullet
+          - @member.groups.each do |group|
+            %li
+              = link_to [:admin, group] do
+                #{group.name} (#{group.chapter.name})
+      - else
+        %label.label.secondary #{@member.name} is not subscribed to any groups
+      Member since
+      %em #{l(@member.created_at, format: :website_format)}
+
+.stripe.reverse
+  .row
+    .medium-8.columns
+      - if @member.session_invitations.accepted.any?
+        .panel
+          %p
+            #{@member.name} RSVPed to
+            %label.label.secondary.round #{@member.session_invitations.accepted.count}
+            workshops and attended
+            %label.label.secondary.round #{@invitations.count}.
+            - if @invitations.to_coaches.any? or @invitations.to_students.any?
+              %h4 Attended
+              %ul.no-bullet
+                - if @invitations.to_coaches.any?
+                  %li
+                    %label.label.round #{@invitations.to_coaches.count}
+                    times as a coach
+                - if @invitations.to_students.any?
+                  %li
+                    %label.label.secondary.round #{@invitations.to_students.count}
+                    times as a student
+      - if @invitations.any?
+        %p
+          The last workshop they attended was on <u> #{l(@last_attendance.date_and_time, format: :date)}</u>
+      - else
+        %label.label.secondary
+          #{@member.name} has not attended any events!
+
+
+
+      - if @invitations.any?
+        %h3 Events
+        %table
+          - @invitations.each do |invitation|
+            - workshop = invitation.sessions
+            - if workshop.present?
+              %tr
+                %td
+                  =link_to invitation_path(invitation) do
+                    %label.label=workshop.chapter.name
+                %td
+                  = l(workshop.date_and_time, format: :date)
+                %td
+                  = invitation.note
+    .medium-4.columns
+      = simple_form_for [:admin, @member_note] do |f|
+        = f.input :note, label: false, placeholder: 'e.g. very enthusiastic student.'
+        = f.hidden_field :member_id, value: @member.id
+        = f.submit "Add note", class: 'button small'
       - if @member.member_notes.any?
         = render partial: "member_note", collection: @member.member_notes
       - else
         %em No notes.
-      = simple_form_for [:admin, @member_note] do |f|
-        = f.input :note, label: false
-        = f.hidden_field :member_id, value: @member.id
-        = f.submit "Add note"
-
